# web_hw_10

./: pyproject.toml
WEB_HW_10/WEB_HW_10/: settings.py  urls.py
WEB_HW_10/quotes/: forms.py  models.py  urls.py  views.py
WEB_HW_10/quotes/static/quotes/: style.css
WEB_HW_10/quotes/templates/quotes/: index.html
WEB_HW_10/templates/: base.html
WEB_HW_10/users/: urls.py  views.py
WEB_HW_10/users/templates/users/: login.html  logout.html
