[tool.poetry]
name = "web-hw-10"
version = "0.1.0"
description = ""
authors = ["PYOrm <ormagedon2007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
psycopg2 = "^2.9.9"
sqlparse = "^0.5.1"
sqlalchemy = "^2.0.31"
pymongo = "^4.8.0"
django-crispy-forms = "^2.3"
crispy-bootstrap4 = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
